@@ -7,6 +7,7 @@
 		<key>items</key>
 		<array>
 			<string>9519C22B-6AB8-41A1-94F6-079E0B45C147</string>
+			<string>0568410D-EAF1-4AF3-B6DE-8AF133A91821</string>
 			<string>------------------------------------</string>
 			<string>B545BB1B-A8E1-426C-B50A-426E78B96D38</string>
 			<string>6EF151E5-7149-4F82-8796-0CC40FE589FA</string>
@@ -23,6 +24,7 @@
 	<key>ordering</key>
 	<array>
 		<string>9519C22B-6AB8-41A1-94F6-079E0B45C147</string>
+		<string>0568410D-EAF1-4AF3-B6DE-8AF133A91821</string>
 		<string>B545BB1B-A8E1-426C-B50A-426E78B96D38</string>
 		<string>6EF151E5-7149-4F82-8796-0CC40FE589FA</string>
 		<string>FD25A8DC-22DC-4ED4-B222-B943C8A9117D</string>
